--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,12 @@
 # Don't use quotes( " and ' )
 
-API_ID=
-API_HASH=
-SESSION=
-REDIS_URI=
-REDIS_PASSWORD=
+API_ID=29310987
+API_HASH=336c28913a45587a4c10af8cd620b68f
+SESSION=1BVtsOHABu7XwjlO4WtE23zrbnMfRdwf7I_BW-b-RGySe_pmKuVgdd1HU-oX1NUXyz70MNrnub73mNwhcYLjIlj0s3aG7zi54HmDm7VKi0-3252nc03IgHIhKJMaPlUGcyEPaVmaeH512T3SIZCg4t-zxSnyj7JSl986h9blVdJG7CBFFb8xSJxNcuBuLFACGDS9JVDNpUMTiugN_ryJjEjuwMIFset0eQ5aNxiyWQ2hGUu1Y6c_gO7zEB97XGElJrDsAfLcX3G6yej6C7PCP4IpoXwzGThovlvPE2_ChmzYzYWR2Le01qEqfzOOaVt67K0y5b2pKZejAzr4BvQpXMg3C6bQanyE=
+REDIS_URI=redis-12350.c212.ap-south-1-1.ec2.cloud.redislabs.com:12350
+REDIS_PASSWORD=qujT9nACodF5vWqB26rX1zCimK8u4fKt
 
 # [OPTIONAL]
 
-LOG_CHANNEL=
-BOT_TOKEN=
+LOG_CHANNEL=-1001701006805
+BOT_TOKEN=6422903198:AAG9AW65l7Cghk0Pv_A1dcZD_VASLfpC5ts
